--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
       <div class = "mid-section">
         <div class = "score-panel bg--red">
           <div class = "flex-box">
-            <img src = "/assets/images/icon-reaction.svg">
+            <img src = "./assets/images/icon-reaction.svg">
             <div class = "score-title  bg-red-font">Reaction</div>
           </div>
           <div class = "score">80<span class = "bg-grey-font"> / 100</span></div>
         </div>
         <div class = "score-panel bg--yellow">
           <div class = "flex-box">
-            <img src = "/assets/images/icon-memory.svg">
+            <img src = "./assets/images/icon-memory.svg">
             <div class = "score-title  bg-yellow-font">Memory</div>
           </div>
           <div class = "score">92<span class = "bg-grey-font"> / 100</span></div>
         </div>
         <div class = "score-panel bg--green">
           <div class = "flex-box">
-            <img src = "/assets/images/icon-verbal.svg">
+            <img src = "./assets/images/icon-verbal.svg">
             <div class = "score-title bg-green-font">Verbal</div>
           </div>
           <div class = "score">61<span class = "bg-grey-font"> / 100</span></div>
         </div>
         <div class = "score-panel bg--blue">
           <div class = "flex-box">
-            <img src = "/assets/images/icon-visual.svg">
+            <img src = "./assets/images/icon-visual.svg">
             <div class = "score-title bg-blue-font">Visual</div>
           </div>
           <div class = "score">72<span class = "bg-grey-font"> / 100</span></div>
